--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pyrebase4
-streamlit
-cohere
-Pillow
-ollama
+pyrebase4==4.8.0
+streamlit==1.41.1
+gcloud>=0.18.3
+oauth2client>=4.1.2
+pycryptodome>=3.6.4
+requests>=2.31
+requests-toolbelt>=0.7.1,<1.0
